do supporter history view backend
